# instant_explore

./: .firebaserc  .gitignore  BACKLOG.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  LICENSE  MARKETING.md  PLAN.md  PROGRESS.md  README.md  SCHEDULE.md  TECHNICAL_FEASIBILITY.md  firebase.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/demo/perplexica/: .env.example  README.md  RESEARCH_QUALITY_COMPARISON.md  docker-compose.yml
backend/deploy/: crontab.example
backend/scripts/: backfill_card_fields.py  daily_video_post.py  diagnose_daily_story.py  download_card_fonts.py  manual_daily_story.py  manual_ig_publish.py  perplexica_demo.py  publish_reel.py  source_quality_compare.py  unsplash_images.py
backend/scripts/metrics/: __init__.py  _common.py  ga4.py  gsc.py  ig.py  ig_posts.py  report.py  sheets_sync.py  store.py  stores.py
backend/src/lorescape_backend/: api.py  auth.py  config.py  dependencies.py  logging_config.py
backend/tests/: _fakes.py  conftest.py  test_api.py  test_auth.py  test_backfill_card_fields.py  test_bot_interactions.py  test_bot_review_poster.py  test_bot_scheduler.py  test_caption.py  test_card_content.py  test_card_fit.py  test_card_mapper.py  test_card_renderer.py  test_card_storage.py  test_card_template.py  test_config.py  test_discord_notify.py  test_discord_review.py  test_executor.py  test_fakes.py  test_gemini_client.py  test_instagram_client.py  test_job.py  test_logging_config.py  test_manual_daily_story.py  test_place_picker.py  test_post_log.py  test_prompts.py  test_publish_reel_script.py  test_publisher.py  test_publisher_daemon.py  test_publisher_prerendered.py  test_reel_cover.py  test_reel_publisher.py  test_story_writer.py  test_threads_client.py  test_wander_content.py  test_wander_renderer.py  test_wander_template.py  test_wikipedia.py
backend/tests/metrics/: test_common.py  test_ga4.py  test_gsc.py  test_ig.py  (+4 more)
dashboard/: .env.example  pyproject.toml
dashboard/tests/: test_backlog.py  test_cli.py  test_daily_story.py  test_deploys.py  test_e2e_cases.py  test_metrics.py  test_notion_writer.py  test_reels_calendar.py  test_render.py  test_schedule.py  test_server.py  test_tests_collectors.py
publisher/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
publisher/scripts/: backfill_card_fields.py  diagnose_daily_story.py  download_card_fonts.py
publisher/tests/: conftest.py  test_backfill_card_fields.py  test_bot_interactions.py  test_bot_review_poster.py  test_bot_scheduler.py  test_caption.py  test_card_content.py  test_card_fit.py  test_card_mapper.py  test_card_renderer.py  test_card_storage.py  test_card_template.py  test_config.py  test_discord_notify.py  test_discord_review.py  test_executor.py  test_gemini_client.py  test_instagram_client.py  test_job.py  test_place_picker.py  test_post_log.py  test_prompts.py  test_reel_cover.py  test_reel_publisher.py  test_reel_video_storage.py  test_story_writer.py  test_wander_content.py  test_wander_renderer.py  test_wander_template.py  test_wikipedia.py
scripts/: .env.example  archive_ig_cards.py  daily_video_post.py  dashboard.sh  import_source_video.sh  manual_daily_story.py  meta_token_helper.py  publish_reel.py  pyproject.toml  reel_voiceover.py  send_carousel_for_review.py  send_reel_for_review.py  unsplash_images.py  upload_reel_to_vps.sh  upload_to_drive.py
scripts/daily_story_setup/: .gitignore  README.md  backfill_wikidata_ids.py  fetch_world_heritage_sites.py  requirements.txt  test_backfill_wikidata_ids.py  test_fetch_world_heritage_sites.py  verify_rls.sql
scripts/metrics/: _asc.py  _common.py  ga4.py  gsc.py  ig.py  ig_posts.py  narration.py  report.py  retention.py  revenuecat.py  sheets.py  store.py  store_android.py  store_ios.py  store_ios_pages.py  stores.py
scripts/tests/: conftest.py  test_archive_ig_cards.py  test_common.py  test_daily_video_post.py  test_ga4.py  test_gsc.py  test_ig.py  test_ig_posts.py  test_manual_daily_story.py  test_narration.py  test_publish_reel_script.py  test_reel_voiceover.py  test_report.py  test_retention.py  test_revenuecat.py  test_send_carousel_for_review.py  test_send_reel_for_review.py  test_store.py  test_store_android.py  test_store_ios.py  test_store_ios_pages.py  test_stores.py
(+1497 files in other folders)
