[project]
name = "lorescape-dashboard"
version = "0.1.0"
description = "Lorescape product dashboard: collect backlog/tests/deploys/metrics locally and render to a Notion page"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3.14,<4",
    "requests-mock>=1.12,<2",
]

[project.scripts]
lorescape-dashboard = "lorescape_dashboard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
